duniverse/menhirLib.20200211/test/static/bad/ocaml-keyword.exp
File "ocaml-keyword.mly", line 1, characters 18-28:
Error: this is an OCaml reserved word.
